# fbpyutils

./: .coveragerc  .gitignore  CLAUDE.md  DOC.en.md  DOC.md  GEMINI.md  Makefile  PLAN_001_RELEASE_V1.6.3.md  PLAN_002_RELEASE_V1.6.6.md  PLAN_003_RELEASE_V1.6.8.md  PROMPTS.md  Pipfile  README.md  SPEC.md  TODO.md  pyproject.toml  requirements.txt  sandbox.ipynb  sandbox.py  setup.py
fbpyutils/: __init__.py  app.json  calendar.py  datetime.py  db.py  debug.py  env.py  file.py  image.py  logging.py  ofx.py  process.py  string.py  xlsx.py
fbpyutils/finance/: __init__.py
fbpyutils/finance/bovespa/: __init__.py
fbpyutils/finance/cei/schemas/: __init__.py
fbpyutils/finance/cvm/: __init__.py
fbpyutils/finance/yahoo/: __init__.py
fbpyutils/google/: drive.py
memory_bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
tests/: conftest.py  cvm.ipynb  investidor10.ipynb  nasdaq.ipynb  sandbox.ipynb  test_calendar.py  test_calendar_calendar.py  test_datetime.py  test_datetime_datetime.py  test_db.py  test_debug.py  test_debug_debug.py  test_excelworkbook.py  test_file_absolute_path.py  test_file_build_platform_path.py  test_file_contents.py  test_file_creation_date.py  test_file_file.py  test_file_find.py  test_file_is_window.py  test_file_json.py  test_file_mime_type.py  test_image_resize.py  test_initialization.py  test_logging_env.py  test_minimal.py  test_ofx_ofx.py  test_process_process.py  test_string_string.py  test_xlsx.py  test_xlsx_file.xlsx  test_xlsx_xlsx.py  valid_test.ofx  www.nasdaq.com.pem
tests/resources/: Pasta1.xlsx  Pasta2.xls
