[project]
name = "fbpyutils"
version = "1.6.1"
description = "Francisco Bispo's Utilities for Python"
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = { text = "Apache-2.0" }
authors = [
    { name = "Francisco C J Bispo", email = "fcjbispo@franciscobispo.net" },
]
dependencies = [
    "pandas==2.2.2",
    "ofxparse>=0.21,<0.22",
    "pytz>=2024.1,<2025.0",
    "openpyxl>=3.1.5,<4.0.0",
    "xlrd>=2.0.1,<3.0.0",
]

[project.optional-dependencies]
windows = [
    "python-magic-bin>=0.4.14",
]
unix = [
    "python-magic>=0.4.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "freezegun>=1.5.1",
    "pytest>=8.3.2,<9.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
]
